--- a/angular.json
+++ b/angular.json
@@ -1,34 +1,33 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
   "projects": {
-    "DemoProject": {
+    "my-student-app-my-stedent": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:component": {
+        "@nrwl/angular:component": {
           "style": "scss"
         }
       },
-      "root": "",
-      "sourceRoot": "src",
+      "root": "apps/my-student-app/my-stedent",
+      "sourceRoot": "apps/my-student-app/my-stedent/src",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/DemoProject",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
+            "outputPath": "dist/apps/my-student-app/my-stedent",
+            "index": "apps/my-student-app/my-stedent/src/index.html",
+            "main": "apps/my-student-app/my-stedent/src/main.ts",
+            "polyfills": "apps/my-student-app/my-stedent/src/polyfills.ts",
+            "tsConfig": "apps/my-student-app/my-stedent/tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "apps/my-student-app/my-stedent/src/favicon.ico",
+              "apps/my-student-app/my-stedent/src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "apps/my-student-app/my-stedent/src/styles.scss"
             ],
             "scripts": []
           },
@@ -36,8 +35,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "apps/my-student-app/my-stedent/src/environments/environment.ts",
+                  "with": "apps/my-student-app/my-stedent/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -66,67 +65,124 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "DemoProject:build"
+            "browserTarget": "my-student-app-my-stedent:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "DemoProject:build:production"
+              "browserTarget": "my-student-app-my-stedent:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "DemoProject:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
+            "browserTarget": "my-student-app-my-stedent:build"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
+              "apps/my-student-app/my-stedent/tsconfig.app.json",
+              "apps/my-student-app/my-stedent/tsconfig.spec.json"
             ],
             "exclude": [
-              "**/node_modules/**"
+              "**/node_modules/**",
+              "!apps/my-student-app/my-stedent/**/*"
             ]
           }
         },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+        "test": {
+          "builder": "@nrwl/jest:jest",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "DemoProject:serve"
+            "jestConfig": "apps/my-student-app/my-stedent/jest.config.js",
+            "tsConfig": "apps/my-student-app/my-stedent/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "apps/my-student-app/my-stedent/src/test-setup.ts"
+          }
+        }
+      }
+    },
+    "my-student-app/my-stedent-e2e": {
+      "root": "apps/my-student-app/my-stedent-e2e",
+      "sourceRoot": "apps/my-student-app/my-stedent-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/my-student-app/my-stedent-e2e/cypress.json",
+            "tsConfig": "apps/my-student-app/my-stedent-e2e/tsconfig.e2e.json",
+            "devServerTarget": "my-student-app-my-stedent:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "DemoProject:serve:production"
+              "devServerTarget": "my-student-app-my-stedent:serve:production"
             }
           }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/my-student-app/my-stedent-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/my-student-app/my-stedent-e2e/**/*"
+            ]
+          }
+        }
+      }
+    },
+    "theme": {
+      "projectType": "library",
+      "root": "libs/theme",
+      "sourceRoot": "libs/theme/src",
+      "prefix": "app",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/theme/tsconfig.lib.json",
+              "libs/theme/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/theme/**/*"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/theme/jest.config.js",
+            "tsConfig": "libs/theme/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "libs/theme/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
         }
       }
     }
   },
-  "defaultProject": "DemoProject",
   "cli": {
+    "defaultCollection": "@nrwl/angular",
     "analytics": false
-  }
+  },
+  "schematics": {
+    "@nrwl/angular:application": {
+      "unitTestRunner": "jest",
+      "e2eTestRunner": "cypress"
+    },
+    "@nrwl/angular:library": {
+      "unitTestRunner": "jest"
+    }
+  },
+  "defaultProject": "my-student-app-my-stedent"
 }
